# dioxus-agent-rs

./: Cargo.toml  README.md  REFACTOR_PLAN.md  SPEC.md  contract-spec.md  defects.md  dummy.html  fix.py  fix2.py  fix3.py  fix4.py  fix5.py  fix6.py  fix_actions.py  fix_all.py  fix_calc.py  fix_json.py  fix_pixel_diff.py  fix_pure_math.py  fix_test_review.py  fix_tests.py  fix_timeout_test.py  fix_trace.py  fix_trace_module.py  fix_trace_pure.py  fix_types.py  implementation.md  martin-fowler-tests.md  refactor.py  rewrite_types.py  split_files.py  test-defects.md  test.html  test_file.rs  test_oxide.rs  test_script.txt  test_upload.rs
src/: actions.rs  calculations.rs  data.rs  lib.rs  main.rs
src/actions/: mod.rs
src/actions/handlers/: mod.rs
src/calculations/: image_diff.rs  js.rs  mod.rs  trace.rs
src/data/: types.rs
tests/: calculations.rs
