[package]
name = "dioxus-agent-rs"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full", "macros", "rt-multi-thread"] }
shlex = "1.3"
rustyline = "14.0"
serde = { version = "1.0.228", features = ["derive"] }
image = { version = "0.25.10", features = ["png"] }
thiserror = "2.0.18"
chromiumoxide = "0.9.1"
url = "2.5.8"
fantoccini = "0.22.1"
reqwest = { version = "0.13.2", features = ["json"] }
scopeguard = "1.2.0"
tokio-util = { version = "0.7.18", features = ["rt"] }
base64 = "0.22.1"

[dev-dependencies]
proptest = "1.10.0"
